Prepare for dataset

--- a/datasets/.gitignore
+++ b/datasets/.gitignore
@@ -2,3 +2,6 @@
 *
 # Except this file
 !.gitignore
+!Temporal_Anomaly_Annotation_for_Testing_Videos.txt
+!ReadMe-Anomaly-Detection.txt
+!Anomaly_Train.txt
