Use the yaml config files for feature extraction configuration

--- a/configs/features-configs/UCFAnomalyDetection/Kinetics_c2_SLOWFAST_8x8_R50_NONE_32x32.yaml
+++ b/configs/features-configs/UCFAnomalyDetection/Kinetics_c2_SLOWFAST_8x8_R50_NONE_32x32.yaml
@@ -1,6 +1,3 @@
-EVAL:
-TRAIN:
-TEST:
 EXTRACT:
   ENABLE: True
   DATASET: UCFAnomalyDetection
@@ -12,20 +9,19 @@ EXTRACT:
   FEATURES_EXT: pt
   FORCE_REWRITE: False
 BACKBONE:
-  Name: Kinetics_c2_SLOWFAST_8x8_R50
+  NAME: Kinetics_c2_SLOWFAST_8x8_R50
   CONFIG_FILE_PATH: backbone-configs/Kinetics/c2/SLOWFAST_8x8_R50.yaml
   CHECKPOINT_FILE_PATH: backbone-checkpoints/Kinetics/c2/SLOWFAST_8x8_R50.pkl
   FEATURE_EXTRACTION: True
   FEATURES_LENGTH: 2304
   TRAINABLE: False
   MERGE_CFG_LIST: [NUM_GPUS, ]
-MODEL:
 DATA:
   PATH_TO_DATA_DIR: UCF_Anomaly_Detection
   READ_FEATURES: False
-  USE_FILES: all
+  USE_FILES: available
   SKIP_LARGE_VIDEOS: True
-  MAX_VIDEO_SIZE: 500 * 1024 * 1024
+  MAX_VIDEO_SIZE: 524288000
   PATH_LABEL_SEPARATOR: " "
   PATH_LABEL_SEPARATOR_TRAINING: "/"
   PATH_LABEL_SEPARATOR_VALIDATION: " "
@@ -42,13 +38,6 @@ DATA:
   EXT: mp4
 TRANSFORM:
   CODE: NONE
-SOLVER:
-NUM_GPUS: 8
+NUM_GPUS: 4
 RNG_SEED: 1
 LOG_MODEL_INFO: True
-BENCHMARK:
-DATA_LOADER:
-DETECTION:
-MULTIGRID:
-TENSORBOARD:
-DEMO: 
