Create config files for feature extraction with background subtraction

--- a/configs/features-configs/UCFAnomalyDetection/Kinetics_c2_I3D_8x8_R50_BG-KNN_32x32.yaml
+++ b/configs/features-configs/UCFAnomalyDetection/Kinetics_c2_I3D_8x8_R50_BG-KNN_32x32.yaml
@@ -37,8 +37,9 @@ DATA:
   REVERSE_INPUT_CHANNEL: False
   EXT: mp4
 TRANSFORM:
-  CODE: NONE
-  BG_SUBTRACTION_ENABLED: False
+  CODE: BG-KNN
+  BG_SUBTRACTION_ENABLED: True
+  BG_SUBTRACTION_ALGORITHM: KNN
 NUM_GPUS: 4
 RNG_SEED: 1
 LOG_MODEL_INFO: True
