--- a/configs/features-configs/UCFAnomalyDetection/Kinetics_c2_I3D_NLN_8x8_R50_BG-MOG2_32x32.yaml
+++ b/configs/features-configs/UCFAnomalyDetection/Kinetics_c2_I3D_NLN_8x8_R50_BG-MOG2_32x32.yaml
@@ -3,15 +3,15 @@ EXTRACT:
   DATASET: UCFAnomalyDetection
   DATASET_SPLITS: [train, test]
   FRAMES_BATCH_SIZE: 32
-  FRAMES_BATCHES_BATCH_SIZE: 64
+  FRAMES_BATCHES_BATCH_SIZE: 48
   NUMBER_OUTPUT_SEGMENTS: 32
   VIDEOS_BATCH_SIZE: 1
   FEATURES_EXT: pt
   FORCE_REWRITE: False
 BACKBONE:
-  NAME: Kinetics_c2_I3D_8x8_R50
-  CONFIG_FILE_PATH: backbone-configs/Kinetics/c2/I3D_8x8_R50.yaml
-  CHECKPOINT_FILE_PATH: backbone-checkpoints/Kinetics/c2/I3D_8x8_R50.pkl
+  NAME: Kinetics_c2_I3D_NLN_8x8_R50
+  CONFIG_FILE_PATH: backbone-configs/Kinetics/c2/I3D_NLN_8x8_R50.yaml
+  CHECKPOINT_FILE_PATH: backbone-checkpoints/Kinetics/c2/I3D_NLN_8x8_R50.pkl
   FEATURE_EXTRACTION: True
   FEATURES_LENGTH: 26624
   TRAINABLE: False
@@ -37,8 +37,9 @@ DATA:
   REVERSE_INPUT_CHANNEL: False
   EXT: mp4
 TRANSFORM:
-  CODE: NONE
-  BG_SUBTRACTION_ENABLED: False
+  CODE: BG-MOG2
+  BG_SUBTRACTION_ENABLED: True
+  BG_SUBTRACTION_ALGORITHM: MOG2
 NUM_GPUS: 4
 RNG_SEED: 1
 LOG_MODEL_INFO: True
