--- a/configs/features-configs/UCFAnomalyDetection/Kinetics_c2_SLOWFAST_8x8_R50_NONE_32x32.yaml
+++ b/configs/features-configs/UCFAnomalyDetection/Kinetics_c2_SLOWFAST_8x8_R50_NONE_32x32.yaml
@@ -15,7 +15,7 @@ BACKBONE:
   FEATURE_EXTRACTION: True
   FEATURES_LENGTH: 2304
   TRAINABLE: False
-  MERGE_CFG_LIST: [NUM_GPUS, ]
+  MERGE_CFG_LIST: [NUM_GPUS, BACKBONE.TRAINABLE]
 DATA:
   PATH_TO_DATA_DIR: UCF_Anomaly_Detection
   READ_FEATURES: False
