Integrate lastest FAIR SlowFast Repo updates

--- a/configs/backbone-configs/Kinetics/pytorchvideo/MVIT_B_16x4_CONV.yaml
+++ b/configs/backbone-configs/Kinetics/pytorchvideo/MVIT_B_16x4_CONV.yaml
@@ -14,7 +14,6 @@ DATA:
   TRAIN_CROP_SIZE: 224
   TEST_CROP_SIZE: 224
   INPUT_CHANNEL_NUM: [3]
-  # PATH_TO_DATA_DIR: path-to-k400-dir
   TRAIN_JITTER_SCALES_RELATIVE: [0.08, 1.0]
   TRAIN_JITTER_ASPECT_RELATIVE: [0.75, 1.3333]
 MVIT:
@@ -72,10 +71,11 @@ SOLVER:
   MOMENTUM: 0.9
   WEIGHT_DECAY: 0.05
   OPTIMIZING_METHOD: adamw
+  COSINE_AFTER_WARMUP: True
 MODEL:
   NUM_CLASSES: 400
   ARCH: mvit
-  MODEL_NAME: MViT
+  MODEL_NAME: PTVMViT
   LOSS_FUNC: soft_cross_entropy
   DROPOUT_RATE: 0.5
 TEST:
