--- a/configs/backbone-configs/ImageNet/MVIT_B_16_CONV.yaml
+++ b/configs/backbone-configs/ImageNet/MVIT_B_16_CONV.yaml
@@ -31,7 +31,7 @@ MVIT:
   DIM_MUL: [[1, 2.0], [3, 2.0], [14, 2.0]]
   HEAD_MUL: [[1, 2.0], [3, 2.0], [14, 2.0]]
   POOL_KVQ_KERNEL: [1, 3, 3]
-  POOL_KV_STRIDE: [[0, 1, 4, 4], [1, 1, 2, 2], [2, 1, 2, 2], [3, 1, 1, 1], [4, 1, 1, 1], [5, 1, 1, 1], [6, 1, 1, 1], [7, 1, 1, 1], [8, 1, 1, 1], [9, 1, 1, 1], [10, 1, 1, 1], [11, 1, 1, 1], [12, 1, 1, 1], [13, 1, 1, 1], [14, 1, 1, 1], [15, 1, 1, 1]]
+  POOL_KV_STRIDE_ADAPTIVE: [1, 4, 4]
   POOL_Q_STRIDE: [[1, 1, 2, 2], [3, 1, 2, 2], [14, 1, 2, 2]]
 AUG:
   ENABLE: True
@@ -62,6 +62,7 @@ SOLVER:
   COSINE_AFTER_WARMUP: True
   COSINE_END_LR: 1e-6
   ZERO_WD_1D_PARAM: True
+  CLIP_GRAD_L2NORM: 1.0
 MODEL:
   NUM_CLASSES: 1000
   ARCH: mvit
@@ -70,7 +71,7 @@ MODEL:
   DROPOUT_RATE: 0.0
 TEST:
   ENABLE: False
-  DATASET: imagenetprefetch
+  DATASET: imagenet
   BATCH_SIZE: 256
 DATA_LOADER:
   NUM_WORKERS: 8
